examples/negative/silent_contract/extern_array_kaikai_type.kai
# Silent contract (#520 audit, category 6 / FFI): an
# `extern "C" fn` declaration uses a kaikai-only literal type
# (`[Int]`, the linked-list type) as its return. C has no notion
# of `List[T]`; the desugar emits a function pointer whose C
# return shape is implementation-defined. Parser/typer should
# reject FFI signatures whose surface types do not map cleanly
# to C ABI.
#
# See examples/negative/silent_contract/README.md for follow-up.

extern "C" fn list_int() : [Int] / Ffi

fn main() : Int / Ffi = {
  let _ = list_int()
  0
}
